# visagent

./: pyproject.toml
examples/: 01 - Basic Benchmarks.ipynb  01 - SEIR Compartmental Model.ipynb  02 - SEIR Agent Based Model.ipynb
scripts/: 01_SEIR_compartmental.py  02_SEIR_agent_based.py
visagent/: __init__.py  agent_based.py  compartmental.py  utils.py
